<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_text"
        android:hint="@string/text"
        app:layout_constraintBottom_toTopOf="@+id/et_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/EditText" />

    <EditText
        android:id="@+id/et_filter"
        android:hint="@string/filter"
        app:layout_constraintBottom_toTopOf="@+id/tv_anagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text"
        style="@style/EditText" />

    <TextView
        android:id="@+id/tv_anagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/empty_text"
        android:textColor="@color/grey_middle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_filter" />

    <Button
        android:id="@+id/bt_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:backgroundTint="@color/grey_dark"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_anagram"
        app:rippleColor="@color/grey_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>
